--- a/comedy.html
+++ b/comedy.html
@@ -24,7 +24,7 @@
 				<th id="dumbanddumber">7/10</th>
 			</tr>
 			<tr>
-				<th id="jumanji2">Jumanji 2</th>
+				<th id="jumanji2"> <a href = "jumanji2.html">Jumanji 2</a></th>
 				<th id= "jumanji2">4/10</th>
 			</tr>
 		</table>
