--- a/romance.html
+++ b/romance.html
@@ -6,8 +6,6 @@
 		rel= "stylesheet" type="text/css"/>
 	</head>
 
-	</head>
-
 	<body>
 		<h1>Romance</h1>
 		<table>
@@ -16,28 +14,25 @@
 				<th id= "rating">Rating</th>
 			</tr>
 
-			<td>
-				<th id="tenthingsihateaboutyou"> <a href = "10thingsihateaboutyou.html">10 Things I Hate About You</a></th>
-				<th id= "tenthingsihateaboutyou">10/10</th>
-			</td>
+			<tr>
+				<td id="tenthingsihateaboutyou"> <a href = "10thingsihateaboutyou.html">10 Things I Hate About You</a></td>
+				<td id= "tenthingsihateaboutyou">10/10</td>
+			</tr>
+			<tr>
+				<td id="thenotebook"> <a href = "thenotebook.html">The Notebook</a></td>
+				<td id="thenotebook">9/10</td>
+			</tr>
 
-			<td>
-				<th id="thenotebook"> <a href = "thenotebook.html">The Notebook</a></th>
-				<th id="thenotebook">9/10</th>
-			</td>
+			<tr>
+				<td id="cantbuymelove"> <a href = "cantbuymelove.html">Cant Buy Me Love</a></td>
+				<td id="cantbuymelove">7/10</td>
+			</tr>
 
-			<td>
-				<th id="cantbuymelove"> <a href = "cantbuymelove.html">Cant Buy Me Love</a></th>
-				<th id="cantbuymelove">7/10</th>
-			</td>
-
-			<td>
-		        <th id= "mygirl"><a href= "mygirl.html">My Girl</a></th>
-				<th id= "mygirl">3/10</th>
-			</td>
+			<tr>
+		        <td id= "mygirl"><a href= "mygirl.html">My Girl</a></td>
+				<td id= "mygirl">3/10</td>
+			</tr>
 		</table>
-
-
 		 
 	</body>
 
